PropertyValue: value can be a string, a number or a boolean. This enables representing things correctly in YAML.