@@ -3,7 +3,6 @@ package tech.jhipster.lite.module.infrastructure.secondary;
 import static tech.jhipster.lite.module.domain.JHipsterModule.*;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.stream.Collectors;
@@ -26,7 +25,7 @@ class PropertiesFileSpringPropertiesHandler {
     this.file = file;
   }
 
-  public void set(PropertyKey key, PropertyValue value) {
+  public void set(PropertyKey key, PropertyValue<?> value) {
     Assert.notNull("key", key);
     Assert.notNull("value", value);
 
@@ -34,17 +33,17 @@ class PropertiesFileSpringPropertiesHandler {
   }
 
   @ExcludeFromGeneratedCodeCoverage(reason = "Hard to cover IOException")
-  private void updateProperties(PropertyKey key, PropertyValue value) {
+  private void updateProperties(PropertyKey key, PropertyValue<?> value) {
     try {
       String properties = buildProperties(key, value);
 
-      Files.write(file, properties.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(file, properties);
     } catch (IOException e) {
       throw GeneratorException.technicalError("Error updating properties: " + e.getMessage(), e);
     }
   }
 
-  private String buildProperties(PropertyKey key, PropertyValue value) throws IOException {
+  private String buildProperties(PropertyKey key, PropertyValue<?> value) throws IOException {
     String currentProperties = readOrInitProperties();
 
     int propertyIndex = currentProperties.indexOf(propertyId(key));
@@ -69,10 +68,10 @@ class PropertiesFileSpringPropertiesHandler {
     return Files.readString(file) + LINE_BREAK;
   }
 
-  private String propertyLine(PropertyKey key, PropertyValue value) {
+  private String propertyLine(PropertyKey key, PropertyValue<?> value) {
     return new StringBuilder()
       .append(propertyId(key))
-      .append(value.get().stream().collect(Collectors.joining(COLLECTION_SEPARATOR)))
+      .append(value.get().stream().map(Object::toString).collect(Collectors.joining(COLLECTION_SEPARATOR)))
       .toString();
   }
 
